<resources>
    <string name="app_name">HW1lab</string>
    <string name="contact_name">Name</string>
    <string name="contact_surname">Surname</string>
    <string name="add_contact">add</string>
    <string name="contactNameSurname">Contact details</string>
    <string name="textView">TextView</string>
    <string name="call_question">"Call "</string>
    <string name="call_confirm">Yes</string>
    <string name="call_cancel">No</string>
    <string name="call_dialog_tag" />
    <string name="delete_question">"Delete "</string>
    <string name="dialog_confirm">Yes</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="delete_dialog_tag" />
    <string name="delete_cancel_msg">Delete cancel msg</string>
    <string name="retry_msg">retry msg</string>
    <string name="contact_birthday">Birthday dd-mm-yyyy</string>
    <string name="contact_phone_number">Phone number</string>
</resources>
